hphp/hack/test/typecheck/reactive/rx_of_scope9.php
<?hh

interface Rx {
}

class A {
  <<__Rx, __OnlyRxIfImpl(Rx::class), __OnlyRxIfArgs>>
  public function f(<<__OnlyRxIfRxFunc>>(function(): int) $f): void {
    $a = <<__RxOfScope>> () ==> $f();
    $a();
  }
}
